--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.15.3",
         "bootstrap": "4.6.0",
+        "bootstrap-select": "^1.13.18",
         "chart.js": "2.9.4",
         "datatables.net-bs4": "1.10.24",
         "jquery": "3.6.0",
@@ -49,6 +50,7 @@
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.1.0",
         "gulp-uglify": "3.0.2",
-        "merge-stream": "2.0.0"
+        "merge-stream": "2.0.0",
+        "prettier": "2.6.1"
     }
 }
